fixed spacing on items and aded border-bottom to the items

--- a/src/App.css
+++ b/src/App.css
@@ -156,8 +156,9 @@ input:read-only {
   width: 100%;
   background-color: transparent;
   color: white;
-  border-bottom: none;
+  border: 1px solid rgba(255, 255, 255, 0.199);
   cursor: pointer;
+  padding: 0 1rem !important;
   font-size: 25px;
   align-items: center;
   display: flex;
@@ -192,6 +193,10 @@ input:read-only {
   border: none;
   color: white;
   width: min-content;
+  display: flex;
+  height: 37px;
+  align-items: center;
+  justify-content: center;
 }
 /* fact css */
 .fact-container {
